darkmatter/lib/tests/snapshots/horizontal_rule_snapshots__tests__html_custom_color.snap
---
source: darkmatter/lib/tests/horizontal_rule_snapshots.rs
expression: result
---
<style>
.code-block {
    background-color: #111b27;
    border-radius: 6px;
    margin: 1em 0;
    overflow-x: auto;
}

.code-block-title {
    background-color: #07111d;
    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
    padding: 0.5em 1em;
    font-weight: bold;
    border-radius: 6px 6px 0 0;
}

.code-table {
    width: 100%;
    border-collapse: collapse;
}

.ln-gutter {
    padding: 0.25em 0.5em;
    text-align: right;
    user-select: none;
    color: #636d83;
    border-right: 1px solid rgba(255, 255, 255, 0.1);
    width: 1%;
}

.code-content {
    padding: 0.25em 1em;
}

.highlighted {
    background-color: rgba(255, 255, 100, 0.1);
}

pre {
    margin: 0;
    padding: 1em;
}

code {
    font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
    font-size: 0.9em;
}

mark {
    background-color: var(--highlight-bg, #fff3b8);
    color: var(--highlight-fg, inherit);
    padding: 0.1em 0.2em;
    border-radius: 2px;
}
</style>
<svg width="100%" height="40" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto 0 auto; --hr-weight: 4; --hr-color: red; --hr-width: 100%;">
  <line x1="0" y1="50%" x2="100%" y2="50%" stroke="var(--hr-color, red)" stroke-width="var(--hr-weight, 4)" stroke-linecap="round" stroke-dasharray="2,6"/>
</svg>
