darkmatter/lib/tests/snapshots/horizontal_rule_snapshots__tests__terminal_all_attributes.snap
---
source: darkmatter/lib/tests/horizontal_rule_snapshots.rs
expression: result
---
          [34m≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋≋[39m
